update about me

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     
     <hr>
     <h1 style="color:darkblue"><span style="font-family:Times New Roman">About me</span></h1>
-    <p class="MsoNormal"><span style="font-size:16px"><span style="font-family:Times New Roman">I am currently a Ph.D. student at University of California, Los Angeles. My advisor is Prof. <a href="http://web.cs.ucla.edu/~harryxu/">Guoqing(Harry) Xu</a>. Before coming to UCLA, I completed my Master's degree in CS at <a href="http://english.ict.cas.cn/">Institute of Computing Technology</a>, <a href="http://english.cas.cn/">Chinese Academy of Sciences</a>
-    I completed my undergraduate degree in CS at <a href="http://english.hust.edu.cn/">Huazhong Unversity of Science&amp;Technology</a>.
+    <p class="MsoNormal"><span style="font-size:16px"><span style="font-family:Times New Roman">I am currently a Ph.D. student at the Department of Computer Science & Technology, Nanjing University. My advisors are Prof. <a href="https://cs.nju.edu.cn/58/28/c2639a153640/page.htm">Xuandong Li</a> and Assistant Professor <a href="https://zuozhiqiang.bitbucket.io/">Zhiqiang Zuo</a> . Before coming to NJU, I completed my Bachelor of Engineering's degree in CS at <a href="https://cse.seu.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.seu.edu.cn/">Southeast University</a> in 2019.
     <br>It's really a brand-new journey. Enjoy! :)
     </span></span></p>
     <hr>
