--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </span></span></p>
     <hr>
     <h1 style="color:darkblue"><span style="font-family:Times New Roman">Research Interests </span></h1>
-    <p><span style="font-size:16px"><span style="font-family:Times New Roman">Big Data Analytics, Graph Systems, Program Analysis </span></span></p>
+    <p><span style="font-size:16px"><span style="font-family:Times New Roman">Big Data Systems, System softeware, Program Analysis </span></span></p>
     
     <p></p>
     <hr>
