--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-<!-- saved from url=(0032)http://web.cs.ucla.edu/~wangkai/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>Yiyu Zhang's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./files/combo">
     <!-- Source File -->
@@ -64,7 +63,9 @@
     <h1 style="color:darkblue"><span style="font-family:Times New Roman">News </span></h1>
     
     <span style="font-size:16px"><span style="font-family:Times New Roman">
-    <p style="color:darkblue">* 06/2019 Received Bachelor degree from Southeast University</p>
+
+    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+         06/2019 Received Bachelor degree from Southeast University.</p>
 
     
     <hr>
