add nju icon for web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="./files/combo">
     <!-- Source File -->
     <link rel="stylesheet" type="text/css" href="./files/base-min.css">
-    
+    <link rel="shortcut icon" href="./files/nju.png">
     <style> 
        body {
                    margin: auto; /* center in viewport */
