--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="./files/jquery-1.12.4.min.js"></script></head>
     
     <body>
-    <br><br><a href="./files/photo.png" style="float:right;"><img src="./files/photo.png" style="float:right;" height="260" width="200"></a>
+    <br><br><a href="./files/zyy.png" style="float:right;"><img src="./files/zyy.png" style="float:right;" height="288" width="240"></a>
     <br>
     <br>
     <p style="font-size:25px;"> <span style="font-family:Times New Roman"><b>Yiyu Zhang(张 奕 裕)</b></span></p>
