change clustrmap type

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <p>
     Singing, Dancing, Rap, Basketball.
     </p>
-    <a href="https://clustrmaps.com/site/1awar"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff" /></a>
+    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script>
     </span>
 </span>
 </style="color:darkblue">
@@ -164,7 +164,6 @@
 <div class="jvectormap-tip">
 
 </div>
-<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE"></script>
 </body>
 </html>
 
