--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
         09/2019 Became a teaching assistant of <em>Advanced Programming in C++</em> course.</p>
-    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+    <p style="color:darkblue">
         06/2019 Received Bachelor degree from Southeast University.</p>
 
 
