--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     
     <span style="font-size:16px"><span style="font-family:Times New Roman">
 
-
+    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+        09/2019 Gave a talk to SEG group about introduction of Datalog.</p>
     <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
         09/2019 Became a teaching assistant of <em>Advanced Programming in C++</em> course.</p>
     <p style="color:darkblue">
