change slides source file

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>1 A preliminary understanding of Datalog</b> At <i>Nanjing University</i>, Nanjing, China, Sep.20,2019
-    [<a href="./files/Datalog1&2.pptx">Slides</a>] </span></span></p>
+    [<a href="./files/Datalog1&2.pdf">Slides</a>] </span></span></p>
     
 
 
