add autoplay music

--- a/wsy_mylove.html
+++ b/wsy_mylove.html
@@ -77,7 +77,9 @@
     <a href="./img/50_1.jpg"><img src="./img/50_0.jpg" width="80" height="70" style="position: absolute; left: 880px; top: 420px;"> </a>
     <a href="./img/51_1.jpg"><img src="./img/51_0.jpg" width="80" height="70" style="position: absolute; left: 960px; top: 420px;"> </a>
     <a href="./img/52_1.jpg"><img src="./img/52_0.jpg" width="80" height="70" style="position: absolute; left: 1040px; top: 420px;"> </a>
-
+	<!-- 自动播放音乐且显示播放器 -->
+	<audio src="./sun.mp3" controls autoplay loop="loop" style="position: absolute; left: 1040px; top: 600px;"></audio>
+    
     <script>
         (function(window,document,undefined){
 			var hearts = [];
