--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
     <p class="MsoNormal" style="margin-left:.0in;mso-layout-grid-align:none;
     text-autospace:none"><span style="font-size:16px"><span style="font-family:Times New Roman">
-    <span style="color:darkblue"> <a herf="https://github.com/Chianina-system">(Chianina)</a> is now open-sourced on github. <o:p></o:p></span></span></span></p>
+    <span style="color:darkblue"> <a href="https://github.com/Chianina-system">Chianina</a> is now open-sourced on github. <o:p></o:p></span></span></span></p>
     
     <p class="MsoNormal"><span style="font-size:16px"><span style="font-family:Times New Roman">
     <b>2 Safe Language Design and Implementation<o:p></o:p></b></span></span></p>
