--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
     <b>1 Chianina: An Evolving Graph System for Flow- and Context-Sensitive Analyses of Million Lines of C Code</b>  
     <br> By Zhiqiang Zuo, <b>Yiyu Zhang</b>, Qiuhong Pan, Shenming Lu, Yue Li, Linzhang Wang, Xuandong Li, and Guoqing Harry Xu. (Acceptance rate: <b>87/320, 27%</b>)
     <br> To appear in the 42nd ACM SIGPLAN Conference on Programming Language Design and Implementation, (PLDI'21), Virtual, June 20-25, 2021.
-    [<a href="https//github.zyy0721.github.io">PDF</a>] </span></span></p>
+    [<a href="https://github.zyy0721.github.io">PDF</a>] </span></span></p>
 
     <b>2 Systemizing Interprocedural Static Analysis of Large-Scale Systems Code with Graspan</b>  
     <br> By Zhiqiang Zuo, Kai Wang, Aftab Hussain, Ardalan Amiri Sani, <b>Yiyu Zhang</b>, Shenming Lu, Wensheng Dou, Linzhang Wang, Xuandong Li, Chenxi Wang, and Guoqing Harry Xu.
     <br> Accepted to ACM Transactions on Computer Systems, 2021.
-    [<a href="https//github.zyy0721.github.io">PDF</a>] </span></span></p>
+    [<a href="https://github.zyy0721.github.io">PDF</a>] </span></span></p>
     
     
     <hr>
