--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <b>1 Chianina: An Evolving Graph System for Flow- and Context-Sensitive Analyses of Million Lines of C Code</b>  
     <br> By Zhiqiang Zuo, <b>Yiyu Zhang</b>, Qiuhong Pan, Shenming Lu, Yue Li, Linzhang Wang, Xuandong Li, and Guoqing Harry Xu. (Acceptance rate: <b>87/320, 27%</b>)
     <br> In Proceedings of the 42nd ACM SIGPLAN Conference on Programming Language Design and Implementation, (PLDI'21), Virtual, June 20-25, 2021.
-    [<a href="https://dl.acm.org/doi/pdf/10.1145/3453483.3454085">PDF</a>] </span></span></p>
+    [<a href="https://dl.acm.org/doi/10.1145/3453483.3454085">PDF</a>] </span></span></p>
 
     <b>2 Systemizing Interprocedural Static Analysis of Large-Scale Systems Code with Graspan</b>  
     <br> By Zhiqiang Zuo, Kai Wang, Aftab Hussain, Ardalan Amiri Sani, <b>Yiyu Zhang</b>, Shenming Lu, Wensheng Dou, Linzhang Wang, Xuandong Li, Chenxi Wang, and Guoqing Harry Xu.
