--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
     <hr>
     <h1 style="color:darkblue">Services </h1>
     <p>
+        <b>※  </b>ChinaSoft2021 Reviewer
+    </p>
+    <p>
         <b>※  </b>Teaching Assistant:  <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2020/2021
     </p>
     <p>
@@ -189,7 +192,7 @@
     </p>
 
     <p>
-        Last updated at July/9/2021.
+        Last updated at Aug/5/2021.
     </p>
 
     <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script>
