--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
     <hr>
     <h1 style="color:darkblue">Services </h1>
     <p>
+        <b>※  </b><a href="http://www.jos.org.cn/jos/home">Journal Of Software</a> Sub reviewer
+    </p>
+    <p>
         <b>※  </b><a href="http://chinasoft.ccf.org.cn/">ChinaSoft2021</a> Reviewer
     </p>
     <p>
