--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
     <hr>
     <h1 style="color:darkblue">Awards </h1>
     <p>
+        <b>★  </b>First-class Doctoral Execellence Scholarship of Nanjing University, 2021
+    </p>    
+    <p>
         <b>★  </b>Third-class Scholarship at SEG group level, 2020
     </p>
     <p>
