--- a/wsy_mylove.html
+++ b/wsy_mylove.html
@@ -8,9 +8,13 @@
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="shortcut icon" href="./img/short_icon.jpg">
 </head>
-
-<body background="./img/cat.jpg"style="background-image:url(./img/it_is_love.jpg); background-size: 1400px 720px;background-repeat:no-repeat;" ></body>>
-        <!--- 5-->
+<body
+<!-- <body background="./img/cat.jpg"style="background-image:url(./img/it_is_love.jpg); background-size: 1400px 720px;background-repeat:no-repeat;" ></body>> -->
+<div id="Layer1" style="position:absolute; width:100%; height:100%; z-index:-1">
+	<img src="./img/it_is_love.jpg" height="100%" width="100%"/>
+	</div>
+</body>
+	<!--- 5-->
 	<img src="./img/love_1.jpg" width="80" height="70" style="position: absolute; left: 0px; top: 0px;" onclick="lookimg(this.src)">
 	<script>
 		function lookimg(str)
@@ -126,7 +130,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/14_1.jpg" +">")
 		}
 	</script> 
-	<img src="./img/love_head_image1.jpg" width="80" height="70" style="position: absolute; left: 160px; top: 210px;" onclick="lookimg15(this.src)">
+	<img src="./img/love_15.jpg" width="80" height="70" style="position: absolute; left: 160px; top: 210px;" onclick="lookimg15(this.src)">
 	<script>
 		function lookimg15(str)
 		{
@@ -134,7 +138,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/15_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/love_head_image2.jpg" width="80" height="70" style="position: absolute; left: 240px; top: 210px;" onclick="lookimg16(this.src)">
+	<img src="./img/love_16.webp" width="80" height="70" style="position: absolute; left: 240px; top: 210px;" onclick="lookimg16(this.src)">
 	<script>
 		function lookimg16(str)
 		{
@@ -153,7 +157,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/17_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/18_0.jpg" width="80" height="70" style="position: absolute; left: 640px; top: 70px;" onclick="lookimg18(this.src)">
+	<img src="./img/love_17.webp" width="80" height="70" style="position: absolute; left: 640px; top: 70px;" onclick="lookimg18(this.src)">
 	<script>
 		function lookimg18(str)
 		{
@@ -161,7 +165,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/18_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/19_0.jpg" width="80" height="70" style="position: absolute; left: 640px; top: 140px;" onclick="lookimg19(this.src)">
+	<img src="./img/love_18.webp" width="80" height="70" style="position: absolute; left: 640px; top: 140px;" onclick="lookimg19(this.src)">
 	<script>
 		function lookimg19(str)
 		{
@@ -169,7 +173,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/19_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/20_0.jpg" width="80" height="70" style="position: absolute; left: 400px; top: 210px;" onclick="lookimg20(this.src)">
+	<img src="./img/love_19.webp" width="80" height="70" style="position: absolute; left: 400px; top: 210px;" onclick="lookimg20(this.src)">
 	<script>
 		function lookimg20(str)
 		{
@@ -177,7 +181,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/20_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/21_0.jpg" width="80" height="70" style="position: absolute; left: 400px; top: 280px;" onclick="lookimg21(this.src)">
+	<img src="./img/love_20.webp" width="80" height="70" style="position: absolute; left: 400px; top: 280px;" onclick="lookimg21(this.src)">
 	<script>
 		function lookimg21(str)
 		{
@@ -185,7 +189,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/21_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/22_0.jpg" width="80" height="70" style="position: absolute; left: 400px; top: 350px;" onclick="lookimg22(this.src)">
+	<img src="./img/love_21.webp" width="80" height="70" style="position: absolute; left: 400px; top: 350px;" onclick="lookimg22(this.src)">
 	<script>
 		function lookimg22(str)
 		{
@@ -193,7 +197,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/22_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/23_0.jpg" width="80" height="70" style="position: absolute; left: 640px; top: 420px;" onclick="lookimg23(this.src)">
+	<img src="./img/love_22.webp" width="80" height="70" style="position: absolute; left: 640px; top: 420px;" onclick="lookimg23(this.src)">
 	<script>
 		function lookimg23(str)
 		{
@@ -201,7 +205,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/23_1.jpg" +">")
 		}
 	</script>
-    <img src="./img/24_0.jpg" width="80" height="70" style="position: absolute; left: 480px; top: 0px;" onclick="lookimg24(this.src)">
+    <img src="./img/love_23.webp" width="80" height="70" style="position: absolute; left: 480px; top: 0px;" onclick="lookimg24(this.src)">
 	<script>
 		function lookimg24(str)
 		{
@@ -209,7 +213,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/24_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/25_0.jpg" width="80" height="70" style="position: absolute; left: 560px; top: 0px;" onclick="lookimg25(this.src)">
+	<img src="./img/love_24.webp" width="80" height="70" style="position: absolute; left: 560px; top: 0px;" onclick="lookimg25(this.src)">
 	<script>
 		function lookimg25(str)
 		{
@@ -217,7 +221,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/25_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/26_0.jpg" width="80" height="70" style="position: absolute; left: 640px; top: 0px;" onclick="lookimg26(this.src)">
+	<img src="./img/love_25.webp" width="80" height="70" style="position: absolute; left: 640px; top: 0px;" onclick="lookimg26(this.src)">
 	<script>
 		function lookimg26(str)
 		{
@@ -226,7 +230,7 @@
 		}
 	</script>
 
-    <img src="./img/27_0.jpg" width="80" height="70" style="position: absolute; left: 400px; top: 420px;" onclick="lookimg27(this.src)">
+    <img src="./img/love_26.jpg" width="80" height="70" style="position: absolute; left: 400px; top: 420px;" onclick="lookimg27(this.src)">
 	<script>
 		function lookimg27(str)
 		{
@@ -234,7 +238,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/27_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/28_0.jpg" width="80" height="70" style="position: absolute; left: 480px; top: 420px;" onclick="lookimg28(this.src)">
+	<img src="./img/love_27.webp" width="80" height="70" style="position: absolute; left: 480px; top: 420px;" onclick="lookimg28(this.src)">
 	<script>
 		function lookimg28(str)
 		{
@@ -242,7 +246,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/28_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/29_0.jpg" width="80" height="70" style="position: absolute; left: 560px; top: 420px;" onclick="lookimg29(this.src)">
+	<img src="./img/love_28.webp" width="80" height="70" style="position: absolute; left: 560px; top: 420px;" onclick="lookimg29(this.src)">
 	<script>
 		function lookimg29(str)
 		{
@@ -251,7 +255,7 @@
 		}
 	</script>
 	
-	<img src="./img/30_0.jpg" width="80" height="70" style="position: absolute; left: 480px; top: 210px;" onclick="lookimg30(this.src)">
+	<img src="./img/love_29.webp" width="80" height="70" style="position: absolute; left: 480px; top: 210px;" onclick="lookimg30(this.src)">
 	<script>
 		function lookimg30(str)
 		{
@@ -259,7 +263,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/30_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/31_0.jpg" width="80" height="70" style="position: absolute; left: 560px; top: 210px;" onclick="lookimg31(this.src)">
+	<img src="./img/love_30.webp" width="80" height="70" style="position: absolute; left: 560px; top: 210px;" onclick="lookimg31(this.src)">
 	<script>
 		function lookimg31(str)
 		{
@@ -267,7 +271,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/31_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/32_0.jpg" width="80" height="70" style="position: absolute; left: 640px; top: 210px;" onclick="lookimg32(this.src)">
+	<img src="./img/love_31.webp" width="80" height="70" style="position: absolute; left: 640px; top: 210px;" onclick="lookimg32(this.src)">
 	<script>
 		function lookimg32(str)
 		{
@@ -277,7 +281,7 @@
 	</script>
 
     <!--- 0 -->
-    <img src="./img/33_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 0px;" onclick="lookimg33(this.src)">
+    <img src="./img/love_32.webp" width="80" height="70" style="position: absolute; left: 800px; top: 0px;" onclick="lookimg33(this.src)">
 	<script>
 		function lookimg33(str)
 		{
@@ -285,7 +289,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/33_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/34_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 70px;" onclick="lookimg34(this.src)">
+	<img src="./img/love_33.webp" width="80" height="70" style="position: absolute; left: 800px; top: 70px;" onclick="lookimg34(this.src)">
 	<script>
 		function lookimg34(str)
 		{
@@ -293,7 +297,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/34_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/35_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 140px;" onclick="lookimg35(this.src)">
+	<img src="./img/love_34.webp" width="80" height="70" style="position: absolute; left: 800px; top: 140px;" onclick="lookimg35(this.src)">
 	<script>
 		function lookimg35(str)
 		{
@@ -301,7 +305,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/35_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/36_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 210px;" onclick="lookimg36(this.src)">
+	<img src="./img/love_35.webp" width="80" height="70" style="position: absolute; left: 800px; top: 210px;" onclick="lookimg36(this.src)">
 	<script>
 		function lookimg36(str)
 		{
@@ -309,7 +313,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/36_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/37_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 280px;" onclick="lookimg37(this.src)">
+	<img src="./img/love_36.webp" width="80" height="70" style="position: absolute; left: 800px; top: 280px;" onclick="lookimg37(this.src)">
 	<script>
 		function lookimg37(str)
 		{
@@ -317,7 +321,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/37_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/38_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 350px;" onclick="lookimg38(this.src)">
+	<img src="./img/love_37.webp" width="80" height="70" style="position: absolute; left: 800px; top: 350px;" onclick="lookimg38(this.src)">
 	<script>
 		function lookimg38(str)
 		{
@@ -325,7 +329,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/38_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/39_0.jpg" width="80" height="70" style="position: absolute; left: 800px; top: 420px;" onclick="lookimg39(this.src)">
+	<img src="./img/love_38.webp" width="80" height="70" style="position: absolute; left: 800px; top: 420px;" onclick="lookimg39(this.src)">
 	<script>
 		function lookimg39(str)
 		{
@@ -334,7 +338,7 @@
 		}
 	</script>
 
-    <img src="./img/40_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 0px;" onclick="lookimg40(this.src)">
+    <img src="./img/love_39.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 0px;" onclick="lookimg40(this.src)">
 	<script>
 		function lookimg40(str)
 		{
@@ -342,7 +346,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/40_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/41_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 70px;" onclick="lookimg41(this.src)">
+	<img src="./img/love_40.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 70px;" onclick="lookimg41(this.src)">
 	<script>
 		function lookimg41(str)
 		{
@@ -350,7 +354,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/41_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/42_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 140px;" onclick="lookimg42(this.src)">
+	<img src="./img/love_41.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 140px;" onclick="lookimg42(this.src)">
 	<script>
 		function lookimg42(str)
 		{
@@ -358,7 +362,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/42_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/43_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 210px;" onclick="lookimg43(this.src)">
+	<img src="./img/love_42.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 210px;" onclick="lookimg43(this.src)">
 	<script>
 		function lookimg43(str)
 		{
@@ -366,7 +370,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/43_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/44_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 280px;" onclick="lookimg44(this.src)">
+	<img src="./img/love_43.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 280px;" onclick="lookimg44(this.src)">
 	<script>
 		function lookimg44(str)
 		{
@@ -374,7 +378,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/44_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/45_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 350px;" onclick="lookimg45(this.src)">
+	<img src="./img/love_44.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 350px;" onclick="lookimg45(this.src)">
 	<script>
 		function lookimg45(str)
 		{
@@ -382,7 +386,7 @@
 		newwin.document.write("<head> " + "<title>ZYY❤WSY</title>" + " <link rel=" + "shortcut icon" + " href=" + "./img/short_icon.jpg" + ">" + "</head>"+ " <img src=" + "./img/45_1.jpg" +">")
 		}
 	</script>
-	<img src="./img/46_0.jpg" width="80" height="70" style="position: absolute; left: 1120px; top: 420px;" onclick="lookimg46(this.src)">
+	<img src="./img/love_45.webp" width="80" height="70" style="position: absolute; left: 1120px; top: 420px;" onclick="lookimg46(this.src)">
 	<script>
 		function lookimg46(str)
 		{
@@ -391,7 +395,7 @@
 		}
 	</script>
 	
-    <img src="./img/47_0.jpg" width="80" height="70" style="position: absolute; left: 880px; top: 0px;" onclick="lookimg47(this.src)">
+    <img src="./img/love_46.webp" width="80" height="70" style="position: absolute; left: 880px; top: 0px;" onclick="lookimg47(this.src)">
 	<script>
 		function lookimg47(str)
 		{
