--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
     <hr>
     <h1 style="color:darkblue">Awards </h1>
     <p>
+        <b>★  </b>First-class Postgraduate Academic Scholarship, 2021
+    </p>
+    <p>
         <b>★  </b>First-class Doctoral Execellence Scholarship of Nanjing University, 2021
     </p>    
     <p>
