--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
 
 
     <hr>
-    <h1 style="color:darkblue">Awards </h1>
+    <h1 style="color:darkblue">Awards and Honors</h1>
+    <p>
+        <b>★  </b>Excellent Postgraduate of Nanjing University, 2021
+    </p>
     <p>
         <b>★  </b>First-class Postgraduate Academic Scholarship, 2021
     </p>
@@ -227,7 +230,7 @@
     </p>
 
     <p>
-        Last updated at Nov/22/2021.
+        Last updated at Dec/22/2021.
     </p>
 
     <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script>
