--- a/index.html
+++ b/index.html
@@ -257,9 +257,10 @@
     <p>
         Last updated at Apr/22/2022.
     </p>
-
+    <td width="30%" style="width: 33.74%; padding: .75pt .75pt .75pt .75pt" align="center">
     <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script>
     </span>
+    </td>
 </span>
 </style="color:darkblue">
 </span>
