--- a/index.html
+++ b/index.html
@@ -257,10 +257,14 @@
     <p>
         Last updated at Apr/22/2022.
     </p>
-    <td width="30%" style="width: 33.74%; padding: .75pt .75pt .75pt .75pt" align="center">
-    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script>
+
+
+
+    <!-- <script width="" type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script> -->
+    <a href="https://clustrmaps.com/site/1awar" title="Visit tracker"><img src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a" width="140px" height="120px"></a>
+
     </span>
-    </td>
+
 </span>
 </style="color:darkblue">
 </span>
