--- a/index.html
+++ b/index.html
@@ -262,25 +262,25 @@
 								style="width: 100.0%; mso-cellspacing: 1.5pt; mso-yfti-tbllook: 1184; mso-padding-alt: 0in 5.4pt 0in 5.4pt">
 								<tbody>
 									<tr style="mso-yfti-irow: 0; mso-yfti-firstrow: yes; mso-yfti-lastrow: yes">
-										<!-- <td width="23%" style="width: 23.54%; padding: .75pt .75pt .75pt .75pt">
+										<td width="23%" style="width: 23.54%; padding: .75pt .75pt .75pt .75pt">
 										</td>
 										<td width="53%" style="width: 53.54%; padding: .75pt .75pt .75pt .75pt">
 											<div class="footer">
 												<center>
 													<font color="black" size='2'> 
-													Copyright &copy 2022 Zhiqiang Zuo 
-													<br> All rights reserved 
+													
+													<br> 
 
 													</font>
 													<p class="MsoNormal">
-														<i><font color="black">"Simplicity is the ultimate sophistication." -- Leonardo da Vinci </font></i>
+														<i><font color="black">xxx</font></i>
 													</p>
 												</center>
 											</div>
-										</td> -->
+										</td>
 										<td width="23%"
 											style="width: 23.74%; padding: .75pt .75pt .75pt .75pt"
-											align="center">
+											align="right">
 											<div id="clustrmaps-widget"></div> 
 											<!-- <a href='https://clustrmaps.com/site/17e3l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=080808&w=201&t=tt&d=gVXCGJo41tXWbFJHdmI574i_AsrN1PWKXm1VIpVJI6E&co=ffffff&ct=808080'/></a> -->
                                             <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CM5wpB6iIvLbeTA-4GsCENr8F7EhpnHMqZnFsC3BPBE&cl=ffffff&w=a"></script> 
