--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
     <hr>
     <h1 style="color:darkblue">Awards and Honors</h1>
     <p>
+        <b>★  </b>Second-class Doctoral Execellence Scholarship of Nanjing University, 2022
+    </p>
+    <p>
         <b>★  </b>Excellent Postgraduate of Nanjing University, 2021
     </p>
     <p>
@@ -255,7 +258,7 @@
     </p>
 
     <p>
-        Last updated at Sep/12/2022.
+        Last updated at Oct/22/2022.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
