--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <hr>
     <h1 style="color:darkblue"><span style="font-family:Times New Roman">About me</span></h1>
-    <p class="MsoNormal"><span style="font-size:16px"><span style="font-family:Times New Roman">I am currently a Ph.D. student at the Department of Computer Science & Technology, Nanjing University. My advisors are Prof. <a href="https://cs.nju.edu.cn/58/28/c2639a153640/page.htm">Xuandong Li</a> and Assistant Professor( Associate Researcher) <a href="https://z-zhiqiang.github.io/">Zhiqiang Zuo</a> . Before coming to NJU, I completed my Bachelor of Engineering's degree in CS at <a href="https://cse.seu.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.seu.edu.cn/">Southeast University</a> in 2019.
+    <p class="MsoNormal"><span style="font-size:16px"><span style="font-family:Times New Roman">I am currently a Ph.D. student at the Department of Computer Science & Technology, Nanjing University. My advisors are Prof. <a href="https://cs.nju.edu.cn/58/28/c2639a153640/page.htm">Xuandong Li</a> and Associate Professor (with tenure) <a href="https://z-zhiqiang.github.io/">Zhiqiang Zuo</a> . Before coming to NJU, I completed my Bachelor of Engineering's degree in CS at <a href="https://cse.seu.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.seu.edu.cn/">Southeast University</a> in 2019.
     
     </span></span></p>
     <hr>
@@ -230,6 +230,9 @@
     <hr>
     <h1 style="color:darkblue">Awards and Honors</h1>
     <p>
+        <b>★  </b>Excellent Postgraduate of Nanjing University, 2022
+    </p>
+    <p>
         <b>★  </b>First-class Postgraduate Academic Scholarship, 2022
     </p>
     <p>
@@ -261,7 +264,7 @@
     </p>
 
     <p>
-        Last updated at Dec/28/2022.
+        Last updated at Dec/26/2022.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
