--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <b>▶ 基于核外计算的Datalog引擎设计与实现(In Chinese)</b>  
     <br> By <u><b>Yiyu Zhang</b></u>, Guihang Wang, Zhiqiang Zuo, and Xuandong Li.
-    <br> In Journal Of Software (<font color="#ff0000"><strong>JOS, 软件学报</strong></font>)
+    <br> In Journal Of Software (<font color="#ff0000"><strong>JOS, 软件学报</strong></font>), Vol. 34, No. 8, 2023.
     [<a href="http://jos.org.cn/jos/article/abstract/6552?bsh_bid=5671493350">PDF</a>]
     
     <br>
